fixed black background on safari

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body
     background-color: black;
     background-image: url('assets/background.jpg');
     background-repeat: no-repeat;
+    background-attachment: fixed;
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -193,6 +194,7 @@ footer
     bottom: 0;
     width: 100%;
     max-width: 100%;
+    max-height: 200px;
 }
 
 a 
@@ -259,14 +261,3 @@ input:focus {
     outline: none;
 }
 
-
-
-@media only screen and (max-width:400px)
-{
-
-    #bandsintown
-    {
-        font-size: 16px;
-    }
-
-}
